# Core_BG

./: .gitignore  Cargo.toml  GEMINI.md  settings.txt  target.md  test.py  troubleshooting.md  v3_target.md
src/: app.rs  cpu.rs  gpu_ssh.rs  main.rs  renderer.rs  settings_win.rs  tray.rs  window.rs
