[package]
name = "bg_core_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_Media",
    "Win32_UI_Controls",
] }
rand = "0.8.5"
wgpu = "22.1.0"
raw-window-handle = "0.6.2"
bytemuck = { version = "1.16.1", features = ["derive"] }
pollster = "0.3.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
windows = { version = "0.52.0", features = [
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
